# Snake_ECS

./: CMakeLists.txt  README.md
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
debug/.cmake/api/v1/reply/: cache-v2-99d2459ceaa41541a231.json  cmakeFiles-v1-4ef16bc723000a0807a6.json  codemodel-v2-f34d52cbf8d0d4dad365.json  directory-.-Debug-cbeb2f2c15783237c2bb.json  directory-src.engine-Debug-b8adf68c7358ce46116e.json  directory-src.engine.components-Debug-1607a7cec81b8d81107f.json  directory-src.engine.debuggers-Debug-8ee666d72e5464bd9dc9.json  directory-src.engine.ecs-Debug-04424f009a69735992b2.json  directory-src.engine.interfaces-Debug-9ef65bb3ef855a6fc412.json  directory-src.engine.managers-Debug-ff71ad8520264a6d1266.json  directory-src.engine.math-Debug-4ae508005415b19e30bd.json  directory-src.engine.systems-Debug-1bb7b309be6690e38914.json  directory-src.engine.utils-Debug-9d8e11238ddd874e4971.json  directory-src.game-Debug-2addaf8b86aba93ed840.json  index-2023-10-03T19-54-22-0154.json  target-Snake_ECS-Debug-3a711e4e26db47101cca.json  target-components-Debug-fab64afe4dc20877ca91.json  target-debuggers-Debug-c173ae302763a759ed38.json  target-ecs-Debug-027e3f9fc431ea4b4bc5.json  target-engine-Debug-acb52c640373ec328c1e.json  target-game-Debug-1ff742af608ca5543c46.json  target-interfaces-Debug-63a9764dcc3ebf90fe88.json  target-managers-Debug-7c9595543537bab3fdf0.json  target-math-Debug-e4ed18844a9535ae8dab.json  target-systems-Debug-56001354fbba0594f412.json  target-utils-Debug-9b8cc5de82091089a1cb.json  toolchains-v1-2f10195c29445b144dc4.json
debug/src/: cmake_install.cmake
debug/src/components/: cmake_install.cmake
debug/src/core/: cmake_install.cmake
debug/src/engine/: cmake_install.cmake
debug/src/engine/components/: cmake_install.cmake
debug/src/engine/core/: cmake_install.cmake
debug/src/engine/debug/: cmake_install.cmake
debug/src/engine/debuggers/: cmake_install.cmake
debug/src/engine/ecs/: cmake_install.cmake
debug/src/engine/interfaces/: cmake_install.cmake
debug/src/engine/managers/: cmake_install.cmake
debug/src/engine/math/: cmake_install.cmake
debug/src/engine/systems/: cmake_install.cmake
debug/src/engine/utils/: cmake_install.cmake
debug/src/game/: cmake_install.cmake
debug/src/interfaces/: cmake_install.cmake
debug/src/math/: cmake_install.cmake
src/: CMakeLists.txt  main.cpp
src/assets/: snake.json
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp  engineStarter.cpp  engineStarter.hpp  placeholder.cpp  placeholder.hpp
src/engine/components/: CMakeLists.txt  renderable.hpp  transform.hpp
src/engine/debuggers/: CMakeLists.txt  logger.cpp  logger.hpp
src/engine/ecs/: CMakeLists.txt  ECSManager.hpp  componentArray.hpp  componentManager.hpp  ecsPlaceholder.hpp  entity.hpp  entityManager.hpp  system.hpp  systemManager.hpp  types.hpp
src/engine/interfaces/: CMakeLists.txt  observer.hpp  subscriber.hpp
src/engine/managers/: CMakeLists.txt  eventManager.cpp  eventManager.hpp  inputManager.cpp  inputManager.hpp  keyboardManager.cpp  keyboardManager.hpp  renderManager.cpp  renderManager.hpp  resourceManager.cpp  resourceManager.hpp  windowManager.cpp  windowManager.hpp
src/engine/math/: CMakeLists.txt  vector2.hpp  vector3.hpp
src/engine/systems/: CMakeLists.txt  physics2DSystem.cpp  physics2DSystem.hpp  render2DSystem.cpp  render2DSystem.hpp
src/engine/utils/: CMakeLists.txt  deltaTimer.cpp  deltaTimer.hpp  timer.cpp  timer.hpp
src/game/: CMakeLists.txt  gameManager.cpp  gameManager.hpp  gameState.hpp
src/game/components/: CMakeLists.txt  collider.hpp  gameOverScreen.hpp  score.hpp  snake.hpp  sprite.hpp  transform.hpp
src/game/player/: CMakeLists.txt  playerController.cpp  playerController.hpp
src/game/spawners/: CMakeLists.txt  appleSpawner.cpp  appleSpawner.hpp  playerSpawner.cpp  playerSpawner.hpp  scoreSpawner.cpp  scoreSpawner.hpp
src/game/systems/: CMakeLists.txt  collisionSystem.cpp  collisionSystem.hpp  render2DSystem.cpp  render2DSystem.hpp  scoreSystem.cpp  scoreSystem.hpp  snakeSystem.cpp  snakeSystem.hpp
